test/statements/loops/zippered/shapeMismatch.good
shapeMismatch.chpl:6: error: zippered iterands have mismatched shapes